# Lidar-Obstacle-Detection

./: .gitignore  CMakeLists.txt  README.md  results.json
.devcontainer/: Dockerfile  devcontainer.json
data/: clustering.py  test_pcd.pcd
data/gif/: createGif.py
include/: PointProcessor.h  render.h  utils.h
profile/: profile.json
src/: KDTree.hpp  PointProcessor.cpp  PointProcessor.hpp  Timer.hpp  environment.cpp  render.cpp  test.cpp
src/clustering/: DBSCAN.hpp  DensityCluster.hpp  EuclideanCluster.hpp  HDBSCAN.hpp  Octree.hpp
src/euclideanCluster/: EuclideanCluster.hpp  KDTree.hpp
src/ransac/: PlaneModel.hpp  Ransac.hpp
src/utils/: Profiler.hpp
